--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "babel-preset-react": "^6.16.0",
     "react": "^15.4.1",
     "react-dom": "^15.4.1",
-    "webpack": "^1.14.0"
+    "webpack": "^1.14.0",
+    "antd":"^2.7.4"
   }
 }
